Edited for users api
